# bevy_jam_5

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/images/: .player.png-autosave.kra
assets/levels/: 1_intro.txt  1_swap.txt  2_sort.txt  2_transfer.txt  3_boxes.txt  4_manual.txt  5_sync.txt  6_sync2.txt  7_colors.txt  at_blocked.txt  at_corner.txt  at_corner_boxes.txt  at_full_circles.txt  at_single_vertices.txt  bicycle.txt  car.txt  cargo-single.txt  cargo.txt  cargo_single.txt  diamond.txt  disrupt.txt  intro.txt  levels.txt  linked_sort.txt  lotus.txt  manual.txt  num_sort.txt  olympic.txt  pedalo.txt  pyramid.txt  rubik.txt  send.txt  square.txt  teamwork.txt  three-row-simple.txt  three-row.txt  three_row.txt  three_row_simple.txt  tricycle.txt  triple.txt
assets/levels/linkage/: disrupt.txt  linked_sort.txt  pedalo.txt  send.txt
assets/levels/tutorials/: 1_intro.txt  2_boxes.txt  2_transfer.txt  3_boxes.txt  3_cycle.txt  4_manual.txt  4_transfer.txt  5_sync.txt  6_sync2.txt  7_colors.txt
assets/shaders/: background.wgsl  scrolling_texture.wgsl
epilang/tests/: 2_sort.txt  5_sync.txt  6_sync2.txt  car.txt  large_circle.txt  linked_sort.txt  send.txt
epilang/tests/detectors/: clash.txt  two_rails.txt  wall.txt
src/: assets.rs  dev_tools.rs  drawing.rs  explorer.rs  graphics.rs  input.rs  lib.rs  main.rs  save.rs  settings.rs
src/audio/: mod.rs  sfx.rs  soundtrack.rs
src/camera/: inputs.rs  mod.rs  movement.rs  parallax.rs
src/dev_tools/: mod.rs  palette_picker.rs
src/epilang/: ast.rs  builtins.rs  compile.rs  interpreter.rs  ir.rs  lex.rs  mod.rs  parser.rs  test.rs  values.rs
src/explorer/: graph.rs  mod.rs  presentation.rs
src/game/: animation.rs  assets.rs  camera.rs  components.rs  drawing.rs  ecs_free_logic.rs  events.rs  game_sfx.rs  graphics.rs  hints.rs  history.rs  inputs.rs  logic.rs  logic_relay.rs  mod.rs  resources.rs  spawn.rs  synchronization.rs  test.rs
src/game/animation/: jump_turn.rs  mod.rs  paths.rs  popup.rs  spin.rs
src/game/audio/: sfx.rs  soundtrack.rs
src/game/level/: asset.rs  builder.rs  completion.rs  layout.rs  lex.rs  list.rs  list_asset.rs  mod.rs  parser.rs  test.rs
src/game/level/backend/: domain.rs  level_pack.rs  mod.rs
src/game/level/backend/builder/: finalize.rs  mod.rs  runtime.rs  test.rs
src/game/level/builder/: backend.rs  error.rs  layout.rs  logic.rs  mod.rs  vertex_solver.rs
src/game/spawn/: level.rs  mod.rs
src/graphics/: background_material.rs  mod.rs  primitives.rs  scrolling_texture.rs
src/persistent/: io.rs  map_ext.rs  mod.rs
src/playtest/: consts.rs  log.rs  main_form.rs  mod.rs  playing.rs  privacy.rs  recording.rs  stars.rs  submit.rs  title.rs  widgets.rs
src/screen/: credits.rs  level_select.rs  loading.rs  mod.rs  playing.rs  settings.rs  splash.rs  title.rs
src/ui/: background.rs  checkbox.rs  consts.rs  freeze.rs  fullscreen.rs  hover.rs  hud.rs  interaction.rs  mod.rs  multistate.rs  palette.rs  screen_fade.rs  scrollbox.rs  slider.rs  widgets.rs
src/ui/cyl/: events.rs  hierarchy.rs  input.rs  list.rs  mod.rs  multistate.rs  navigation.rs  test.rs  widgets.rs
