[package]
name = "bevy_cycle_permutation_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.0", default-features=false, features = [
#    "animation",
#    "async_executor",
#    "bevy_animation",
#    "bevy_anti_aliasing",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
#    "bevy_gltf",
#    "bevy_input_focus",
    "bevy_log",
#    "bevy_mesh_picking_backend",
#    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
#    "bevy_scene",
    "bevy_sprite_render",
    "bevy_sprite",
#    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_ui_picking_backend",
    "bevy_window",   
    "bevy_winit",
#    "custom_cursor",
    "default_font",
#    "hdr",
#    "ktx2",
    "multi_threaded",
    "png",
#    "smaa_luts",
    "std",
    "sysinfo_plugin",
#    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
#    "zstd",
] }

itertools = "0.14.0"
# Disable low-severity logs at compile time for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand =  { version = "0.8", features = ["small_rng"] }
regex = "1.10.5"
logos = "0.15.0"
pomelo = "0.2.1"
serde = "*"
serde_json = "*"
directories = "6.0.0"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]
hotpatching = [
    "dev_native",
    "bevy/hotpatching",
]

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"
