[package]
name = "bevy_cycle_permutation_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18.0", default-features=false, features = [
    # "asset_processor",            # Enables the built-in asset processor for processed assets.
    "async_executor",               # Uses `async-executor` as a task execution backend.
    "bevy_asset",                   # Provides asset functionality
    "bevy_audio",                   # Provides audio functionality
    "bevy_camera",                  # Provides camera and visibility types, as well as culling primitives.
    "bevy_color",                   # Provides shared color types and operations
    "bevy_core_pipeline",           # Provides cameras and other basic render pipeline features
    # "bevy_gilrs",                 # Adds gamepad support
    "bevy_image",                   # Load and access image data. Usually added by an image format
    "bevy_log",                     # Enable integration with `tracing` and `log`
    # "bevy_material",              # Provides materials.
    "bevy_mesh",                    # Provides a mesh format and some primitive meshing routines.
    # "bevy_mikktspace",            # Provides vertex tangent generation for use with bevy_mesh.
    # "bevy_picking",               # Provides picking functionality
    "bevy_render",                  # Provides rendering functionality
    "bevy_shader",                  # Provides shaders usable through asset handles.
    "bevy_sprite",                  # Provides sprite functionality
    "bevy_sprite_render",           # Provides sprite rendering functionality
    "bevy_state",                   # Enable built in global state machines
    "bevy_text",                    # Provides text functionality
    "bevy_ui",                      # A custom ECS-driven UI framework
    "bevy_ui_render",               # Provides rendering functionality for bevy_ui
    "bevy_window",                  # Windowing layer
    "bevy_winit",                   # winit window and input backend
    "critical-section",             # `critical-section` provides the building blocks for synchronization primitives on all platforms, including `no_std`.
    "default_font",                 # Include a default font, containing only ASCII characters, at the cost of a 20kB binary size increase
    # "force_disable_dlss",         # Forcibly disable DLSS so that cargo build --all-features works without the DLSS SDK being installed. Not meant for users.
    # "hotpatching",                # Enable hotpatching of Bevy systems
    "jpeg",                         # JPEG image format support
    "libm",                         # Uses the `libm` maths library instead of the one provided in `std` and `core`.
    "mp3",                          # MP3 audio format support
    "multi_threaded",               # Enables multithreaded parallelism in the engine. Disabling it forces all engine tasks to run on a single thread.
    "png",                          # PNG image format support
    "reflect_auto_register",        # Enable automatic reflect registration
    "reflect_auto_register_static", # Enable automatic reflect registration without inventory. See `reflect::load_type_registrations` for more info.
    # "reflect_documentation",      # Enables bevy_reflect to access documentation comments of rust code at runtime
    # "reflect_functions",          # Enable function reflection
    # "serialize",                  # Enable serialization support through serde
    # "spirv_shader_passthrough",   # Enable passthrough loading for SPIR-V shaders (Only supported on Vulkan, shader capabilities and extensions must agree with the platform implementation)
    "std",                          # Allows access to the `std` crate.
    # "sysinfo_plugin",             # Enables system information diagnostic plugin
    # "tonemapping_luts",           # Include tonemapping Look Up Tables KTX2 files. If everything is pink, you need to enable this feature or change the `Tonemapping` method for your `Camera2d` or `Camera3d`.
    # "trace",                      # Tracing support
    # "trace_chrome",               # Tracing support, saving a file in Chrome Tracing format
    # "trace_tracy",                # Tracing support, exposing a port for Tracy
    # "trace_tracy_memory",         # Tracing support, with memory profiling, exposing a port for Tracy
    # "track_location",             # Enables source location tracking for change detection and spawning/despawning, which can assist with debugging
    "ui_picking",                   # Provides an implementation for picking UI
    "vorbis",                       # OGG/VORBIS audio format support
    # "wayland",                    # Wayland display server support
    "x11",                          # X11 display server support
] }

itertools = "0.14.0"
# Disable low-severity logs at compile time for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand =  { version = "0.9", features = ["small_rng"] }
smallvec = "1.15.1" # Use same version as bevy does
regex = "1.10.5"
logos = "0.16.0"
pomelo = "0.2.3"
serde = "*"
serde_json = "*"
directories = "6.0.0"

bevy_ui_text_input = { git = "https://github.com/Elekrisk/bevy_ui_text_input", branch = "bevy-0.18", optional = true }

[features]
default = [
    # Default to a native dev build.
    "dev_native",
    # While playtest view is in development, enable it by default
    "playtest",
]
dev = [
    "bevy/debug", # Enable collecting debug information about systems and components to help with diagnostics
    "bevy/dynamic_linking", # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/bevy_gizmos",
    "bevy/bevy_gizmos_render",
    "bevy/embedded_watcher", # Enables watching in memory asset providers for Bevy Asset hot-reloading
    "bevy/file_watcher", # Enables watching the filesystem for Bevy Asset hot-reloading
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]
hotpatching = [
    "dev_native",
    "bevy/hotpatching",
]
playtest = [
    "dep:bevy_ui_text_input",
]

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"
